[package]
name = "okmath"
version = "0.3.0"
authors = ["Vi <violet@hey.com>"]
edition = "2021"

[dependencies]
serde = { version = "~1.0.145", features = ["derive"], optional = true}

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "~0.4.0"

[[bench]]
name = "operations"
harness = false
